[gd_scene load_steps=5 format=1]

[ext_resource path="res://script/cena_canos.gd" type="Script" id=1]
[ext_resource path="res://assets/Pipe/pipe-green.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 21.2781, 158.116 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 0.671295, -69.119 )
b = Vector2( 0.671295, 97.6659 )

[node name="cena_canos" type="Node2D"]

script/script = ExtResource( 1 )

[node name="pipe_top" type="Sprite" parent="."]

editor/display_folded = true
texture = ExtResource( 2 )
flip_v = true

[node name="area2D" type="Area2D" parent="pipe_top"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.814484, -0.814529 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="shape" type="CollisionShape2D" parent="pipe_top/area2D"]

transform/pos = Vector2( -0.814484, -0.814529 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="pipe_down" type="Sprite" parent="."]

transform/pos = Vector2( 0, 460.721 )
texture = ExtResource( 2 )

[node name="area2D" type="Area2D" parent="pipe_down"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.814484, -0.814529 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="shape" type="CollisionShape2D" parent="pipe_down/area2D"]

transform/pos = Vector2( -0.814484, -0.814529 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="areaScore" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 39.2876, 217.31 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="shape" type="CollisionShape2D" parent="areaScore"]

transform/pos = Vector2( 39.2876, 217.31 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Position2D" type="Position2D" parent="."]

transform/pos = Vector2( 42.1716, 231.264 )

[connection signal="body_enter" from="pipe_top/area2D" to="." method="_on_area2D_body_enter"]

[connection signal="body_enter_shape" from="pipe_down/area2D" to="." method="_on_area2D_body_enter_shape"]

[connection signal="body_enter" from="areaScore" to="." method="_on_areaScore_body_enter"]


